# h3ronpy

./: .gitignore  .readthedocs.yaml  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  Cargo.toml  MANIFEST.in  README.ipynb  README.md  README.rst  install-dev-dependencies.py  justfile  pyproject.toml  requirements.documentation.txt
.github/workflows/: ci.yml
crates/h3arrow/: CHANGES.md  Cargo.toml  README.md
crates/h3arrow/src/: error.rs  export.rs  lib.rs  spatial_index.rs
crates/h3arrow/src/algorithm/: bounding_rect.rs  centroid.rs  change_resolution.rs  compact.rs  concave_hull.rs  convex_hull.rs  coordinates.rs  grid.rs  localij.rs  mod.rs  string.rs
crates/h3arrow/src/array/: cell.rs  directededge.rs  from_geo.rs  from_geoarrow.rs  list.rs  mod.rs  resolution.rs  to_geo.rs  to_geoarrow.rs  validity.rs  vertex.rs
docs/: requirements.txt
docs/source/: conf.py  index.rst  license.rst
docs/source/api/: arrow.rst  index.rst  pandas.rst  polars.rst
docs/source/usage/: grid.rst  raster.rst  vector.rst
h3ronpy/: CHANGES.rst  Cargo.toml  MANIFEST.in  __init__.py  install-dev-dependencies.py  justfile  op.py  pyproject.toml  raster.py  vector.py
h3ronpy/arrow/: __init__.py  raster.py  util.py  vector.py
h3ronpy/data/: naturalearth_110m_admin_0_countries.fgb  population-841fa8bffffffff.parquet
h3ronpy/docs/: requirements.txt
h3ronpy/docs/source/: conf.py  installation.rst
h3ronpy/docs/source/api/: core.rst  index.rst  polars.rst
h3ronpy/docs/source/usage/: grid.rst  index.rst  raster.rst  vector.rst
h3ronpy/pandas/: __init__.py  vector.py
h3ronpy/polars/: __init__.py  vector.py
h3ronpy/python/h3ronpy/: __init__.py  arrow.py  polars.py  raster.py  util.py  vector.py
h3ronpy/python/h3ronpy/arrow/: __init__.py  raster.py  util.py  vector.py
h3ronpy/python/h3ronpy/pandas/: __init__.py  raster.py  vector.py
h3ronpy/python/h3ronpy/polars/: __init__.py  raster.py
h3ronpy/src/: array.rs  arrow_interop.rs  error.rs  lib.rs  raster.rs  resolution.rs  transform.rs  vector.rs
h3ronpy/src/op/: compact.rs  localij.rs  measure.rs  mod.rs  neighbor.rs  resolution.rs  string.rs  valid.rs
h3ronpy/tests/: __init__.py  test_transform.py
h3ronpy/tests/arrow/: test_benches.py  test_compact.py  test_coordinates.py  test_localij.py  test_measure.py  test_neighbor.py  test_raster.py  test_resolution.py  test_utf8.py  test_vector.py
h3ronpy/tests/pandas/: test_resolution.py  test_vector.py
h3ronpy/tests/polars/: __init__.py  test_benches.py  test_compact.py  test_coordinates.py  test_expr.py  test_localij.py  test_measure.py  test_neighbor.py  test_raster.py  test_series.py  test_utf8.py
python/h3ronpy/: __init__.py
python/h3ronpy/arrow/: __init__.py  raster.py  vector.py
python/h3ronpy/pandas/: __init__.py  raster.py  vector.py
python/h3ronpy/polars/: __init__.py  raster.py  vector.py
src/: arrow_interop.rs  collections.rs  error.rs  lib.rs  op.rs  polygon.rs  raster.rs  transform.rs  vector.rs
src/op/: compact.rs  measure.rs  mod.rs  neighbor.rs  parse.rs  resolution.rs  utf8.rs  valid.rs
tests/: __init__.py  test_op.py  test_raster.py  test_transform.py  test_vector.py
tests/arrow/: test_vector.py
tests/pandas/: test_raster.py  test_resolution.py  test_vector.py
tests/polars/: test_benches.py  test_coordinates.py  test_expr.py  test_neighbor.py  test_parse.py  test_raster.py  test_utf8.py
