[package]
name = "h3ronpy"
version = "0.17.4"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Data science toolkit for the H3 geospatial grid"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "pandas", "geopandas", "arrow", "polars", "numpy", "python"]
homepage = "https://github.com/nmandery/h3ronpy"
repository = "https://github.com/nmandery/h3ronpy"

[lib]
name = "h3ronpy"
crate-type = ["cdylib"]

[dependencies]
env_logger = "^0.10"
geo-types = "^0.7"
rasterh3 = "0.4.0"
h3arrow = { version = "0.1.0", features = ["geoarrow", "rayon"] }
#h3arrow = { git = "https://github.com/nmandery/h3arrow.git", rev = "6dacf1650ca7ef6b15a133013f3f610c33893582", features = ["geoarrow", "rayon"] }
#h3arrow = { path = "/home/nicodev/CLionProjects/h3arrow", features = ["geoarrow", "rayon"] }
ndarray = { version = "0.15", features = ["rayon"] }
numpy = "0.19"
ordered-float = ">=2.0.1"
py_geo_interface = { version = "0.6", features = ["f64", "wkb"] }
pyo3 = { version = "0.19", features = ["extension-module", "abi3", "abi3-py38"] }
rayon = "^1.5"
hashbrown = "0.14"
geo = "0.26"
itertools = "0.11"


[profile.release]
lto = "thin"
strip = true
debug = false