[package]
name = "h3ronpy"
version = "0.19.2"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Data science toolkit for the H3 geospatial grid"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "arrow", "python"]
homepage = "https://github.com/nmandery/h3ronpy"
repository = "https://github.com/nmandery/h3ronpy"

[lib]
name = "h3ronpy"
crate-type = ["cdylib"]

[dependencies]
env_logger = "^0.10"
geo-types = "^0.7"
rasterh3 = "^0.5"
#h3arrow = { version = "0.2.0", features = ["geoarrow", "rayon"] }
h3arrow = { git = "https://github.com/nmandery/h3arrow.git", rev = "ec8cf2fc4028016dc784a4e9d660af7222aff126", features = ["geoarrow", "rayon"] }
#h3arrow = { path = "/home/nicodev/CLionProjects/h3arrow", features = ["geoarrow", "rayon"] }
ndarray = { version = "0.15", features = ["rayon"] }
numpy = "0.20"
ordered-float = ">=2.0.1"
py_geo_interface = { version = "0.7", features = ["f64", "wkb"] }
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py38"] }
rayon = "^1.5"
hashbrown = "0.14"
geo = "0.26"
itertools = "0.12"


[profile.release]
lto = "thin"
strip = true
debug = false