[build-system]
requires = [
    "maturin==1.1",
]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules -v -s"
testpaths = [
    "h3ronpy",
    "tests"
]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[project]
name = "h3ronpy"

dependencies = [
    "numpy",
    "pyarrow>=10.0",
    "Shapely>=1.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]


[project.optional-dependencies]
polars = [
    "polars"
]
pandas = [
    "geopandas>=0.10",
]
test = [
    "rasterio",
    "pytest>=6",
    "h3>=3.7",
    "pytest-benchmark"
]