[package]
name = "h3ronpy"
version = "0.21.1"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Data science toolkit for the H3 geospatial grid"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "arrow", "python"]
homepage = "https://github.com/nmandery/h3ronpy"
repository = "https://github.com/nmandery/h3ronpy"

[lib]
name = "h3ronpy"
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
env_logger = "^0.11"
geo-types = { workspace = true }
geo = { workspace = true }
h3arrow = { path = "../crates/h3arrow", features = ["geoarrow", "rayon"] }
hashbrown = "0.14"
itertools = "0.13"
ndarray = { version = "0.15", features = ["rayon"] }
numpy = "0.21"
ordered-float = ">=2.0.1"
py_geo_interface = { version = "0.8", features = ["f64", "wkb"] }
pyo3 = { version = "^0.21", features = ["extension-module", "abi3", "abi3-py39"] }
rasterh3 = { version = "^0.8", features = ["rayon"] }
rayon = { workspace = true }
