[package]
name = "h3ronpy"
version = "0.22.0"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Data science toolkit for the H3 geospatial grid"
edition = "2021"
license = "MIT"
keywords = ["geo", "spatial", "h3", "arrow", "python"]
homepage = "https://github.com/nmandery/h3ronpy"
repository = "https://github.com/nmandery/h3ronpy"

[lib]
name = "h3ronpy"
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true }
env_logger = "^0.11"
geo-types = { workspace = true }
geo = { workspace = true }
h3arrow = { path = "../crates/h3arrow", features = ["geoarrow", "rayon"] }
hashbrown = "0.14"
itertools = "0.13"
ndarray = { version = "0.16", features = ["rayon"] }
numpy = "0.22"
ordered-float = ">=2.0.1"
py_geo_interface = { git = "https://github.com/nmandery/py_geo_interface", rev = "36723cdbabc2a7aad1746a8c06db17b4e39ce3b9", features = [
    "f64",
    "wkb",
] }
pyo3 = { version = "^0.22", features = [
    "extension-module",
    "abi3",
    "abi3-py39",
] }
pyo3-arrow = { version = "0.5.1", default-features = false }
rasterh3 = { git = "https://github.com/nmandery/rasterh3", branch = "main", features = [
    "rayon",
] }
rayon = { workspace = true }
